--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -63,7 +63,7 @@
 
         .error-message {
             font-size: 14px;
-            color: rgb(111, 14, 14);
+            color: red;
             display: block;
             margin-bottom: 14px;
         }
